modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/gd_utility_function_wrong_arg.gd
func test():
	print(len(Color())) # GDScript utility function.
